--- a/styles/play.css
+++ b/styles/play.css
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
     transform-origin: top;
-    /* transition: transform 50ms; */
     will-change: transform;
 }
 
@@ -87,8 +86,6 @@
     font-weight: 700;
     mix-blend-mode: difference;
     transition: scale 200ms cubic-bezier(0.5, 0.04, 0.04, 0.94);
-    /* -webkit-text-stroke: 4px var(--c-action);
-    text-stroke: 4px var(--c-action); */
 }
 
 .play__desc {
